--- a/gb/20/1/5/n11770066.md
+++ b/gb/20/1/5/n11770066.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/ffbns289/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ffbns289/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ffbns289/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>三正部级高官被批“两面人” 他们干了啥？</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2019/01/377162_1-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/01/377162_1-600x400.jpg" />
 <h6>陕西省委前书记赵正永等42名高官被批是“两面人”。（大纪元合成图）
 </h6>
 <hr>
-<p>【大纪元2020年01月06日讯】（大纪元记者张顿报导）2019年，中共42名中管干部被立案审查调查，他们都被指是“<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E4%B8%A4%E9%9D%A2%E4%BA%BA.md">两面人</a>”，其中三名正部级高官<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E8%B5%B5%E6%AD%A3%E6%B0%B8.md">赵正永</a>、<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E7%A7%A6%E5%85%89%E8%8D%A3.md">秦光荣</a>、<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E5%AD%9F%E5%AE%8F%E4%BC%9F.md">孟宏伟</a>被点名批评。</p>
-<p>1月4日，中共陕西省委前书记<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E8%B5%B5%E6%AD%A3%E6%B0%B8.md">赵正永</a>，赵的“大管家”、陕西省副省长陈国强被立案审查调查。</p>
-<p>中纪委批赵正永是典型的“<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E4%B8%A4%E9%9D%A2%E4%BA%BA.md">两面人</a>”、“两面派”，大搞特权，培植个人势力，搞团团伙伙；批陈国强“不忠诚不老实”，大搞政治攀附和人身依附，对抗组织审查等。</p>
+<p>【大纪元2020年01月06日讯】（大纪元记者张顿报导）2019年，中共42名中管干部被立案审查调查，他们都被指是“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%A4%E9%9D%A2%E4%BA%BA.md#1">两面人</a>”，其中三名正部级高官<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B5%B5%E6%AD%A3%E6%B0%B8.md#1">赵正永</a>、<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A7%A6%E5%85%89%E8%8D%A3.md#1">秦光荣</a>、<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%AD%9F%E5%AE%8F%E4%BC%9F.md#1">孟宏伟</a>被点名批评。</p>
+<p>1月4日，中共陕西省委前书记<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E8%B5%B5%E6%AD%A3%E6%B0%B8.md#1">赵正永</a>，赵的“大管家”、陕西省副省长陈国强被立案审查调查。</p>
+<p>中纪委批赵正永是典型的“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%A4%E9%9D%A2%E4%BA%BA.md#1">两面人</a>”、“两面派”，大搞特权，培植个人势力，搞团团伙伙；批陈国强“不忠诚不老实”，大搞政治攀附和人身依附，对抗组织审查等。</p>
 <p>1月5日，中纪委官网刊发的《坚决清除两面人、两面派》文章说，2019年中央纪委国家监委立案审查调查的中管干部，无一例外都存在“七个有之”和“两面人”问题。</p>
-<p>而2019年1至11月，有42名中管干部被立案审查调查。</p>
-<p>文章点名批赵正永是典型的“两面人”、“两面派”，点名批中共云南省委前书记<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E7%A7%A6%E5%85%89%E8%8D%A3.md">秦光荣</a>“公开发表与全面从严治党要求相违背的言论”，点名批中共前公安部副部长<a href="https://github.com/ffbns289/djy/blob/master/gb/tag/%E5%AD%9F%E5%AE%8F%E4%BC%9F.md">孟宏伟</a>“拒不执行党中央决定”。</p>
+<p>而2019年1至11月，有42名中管干部被立案审查调查。中管干部，是指在中组部备案、由中共中央任命的干部。中管干部，一般为副部级以上官员。</p>
+<p>文章点名批赵正永是典型的“两面人”、“两面派”，点名批中共云南省委前书记<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E7%A7%A6%E5%85%89%E8%8D%A3.md#1">秦光荣</a>“公开发表与全面从严治党要求相违背的言论”，点名批中共前公安部副部长<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%AD%9F%E5%AE%8F%E4%BC%9F.md#1">孟宏伟</a>“拒不执行党中央决定”。</p>
 <p>那么这三名正部级的高官，到底干了些啥呢？</p>
 <h2><strong>赵正永对当局“阳奉阴违”</strong></h2>
 <p>赵正永2010年6月任陕西省代省长，2011年1月升任省长，2012年12月至2016年3月任省委书记。</p>
@@ -27,7 +27,7 @@
 <h2><strong>秦光荣曾叫板中南海</strong></h2>
 <p>秦光荣2019年5月9日“主动投案”，9月26日被立案审查调查、起诉，11月25日被提起公诉。</p>
 <p>当局指控他对当局“不忠诚不老实，做两面人”；“公开发表与全面从严治党要求相违背的言论”，干预和插手矿产资源转让；与不法私营企业主沆瀣一气，大肆敛财等。</p>
-<p>秦光荣也被指是江派周永康、薄熙来的人马，被指曾给周输送大量利益。</p>
+<p>秦光荣也被指是江派周永康、薄熙来的人马，被指曾给周家输送大量利益。</p>
 <p>在当今中共官员几乎人人都贪腐的情况下，外界普遍认为，秦光荣被查的主要原因也是政治原因：与当局唱反调，“做两面人”。</p>
 <p>秦光荣的唱反调主要表现在：</p>
 <p>重庆事件2012年2月6日爆发，时任政治局委员薄熙来、政治局常委周永康、江泽民、曾庆红正在密谋进行的政变计划随即曝光。</p>
@@ -36,44 +36,48 @@
 <p>但就在2012年3月，薄熙来被免职，第二年，薄被判处无期徒刑。</p>
 <p>2014年7月29日，中共前政治局常委、政法委书记周永康被立案审查。第二天，秦光荣在省委中心学习会议上讲话时称，官员“不能因为一点自身利益就举报；自身清白干实事的也不要怕被举报”，并称“云南100封举报信，可能6封是实的”。</p>
 <p>秦光荣的言论当时引发舆论大哗，被认为与王岐山主掌的中纪委鼓励官员举报对着干，与前一天刚刚拿下周永康的习近平叫板。</p>
-<p>秦发表该言论不到3个月，就于2014年10月14日被免去云南省委书记，随后调任中共人大闲职。</p>
+<p>秦发表该言论不到3个月，就于2014年10月14日被免去云南省委书记，随后调任中共人大闲职。#</p>
 <p>责任编辑：高静</p>
 
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/5/n11770066.htm">三正部级高官被批“两面人” 他们干了啥？</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767304.htm">赵正永的大管家 陕西前副省长陈国强被双开</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767045.htm">陕西前书记赵正永被审查 通报措辞极严厉</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/14/n11383492.htm">秦光荣湖南官场丑闻曝光 情妇找到市委大院</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/9/n11244828.htm">云南省委前书记秦光荣落马 曾叫板中南海</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/10/11/n10776157.htm">传公安部副部长孟宏伟涉北戴河政变</a></li>
-> <li><a href="https://github.com/ffbns289/djy/blob/master/gb/19/9/26/n11548796.md">秦光荣被起诉 官方通报泄其落马政治原因</a></li>
-> <li><a href="https://github.com/ffbns289/djy/blob/master/gb/19/3/27/n11144212.md">孟宏伟“双开”通报  内含落马政治原因</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768058.htm">习近平谈中共领导人更替 接班人制再引关注</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768055.htm">川普击毙伊朗二号人物 对中共释何种信号</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11768022.htm">港中联办主任遭撤换 新任骆惠宁有三大特点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/5/n11768450.htm">德黑兰若报复 川普：将直捣伊朗52个地点</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/21/n11737632.htm">自伐者无功！三国谋士许攸的教训</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11760693.htm">蒋经国一生反共信念的历程</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745673.htm">父梦桂树 子梦黄鹤 奇梦超前预言一生</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/1/15/n4343055.htm">士为知己者死 古人交友重义胜于生命</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11764607.htm">“中国淡水鱼之王”长江白鲟被宣告灭绝</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11764609.htm">川普为何下令击毙伊朗将军 五角大楼发声明</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766230.htm">杭州政府要求全民储粮 被指转嫁粮食危机</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11763808.htm">家被强拆父母冤死 男子出狱报复致1死2伤</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11743745.htm">【罗厨寻味】年菜系列之一：砂锅焗红鱼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11766765.htm">【拍案惊奇】舌尖上的瘟疫 武汉肺炎与野味</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11763655.htm">林夕歌曲作词人变佚名 网民斥中共电视台无耻</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766037.htm">凑成好字 40岁章子怡宣布新年二胎产子</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/2/n11764071.htm">华谊老板致员工信责影视团队：失误堪称致命</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/4/n11767649.htm">第34届金唱片奖 防弹少年团获音源部门大奖</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/3/n11766447.htm">姚晨送祝福意外引插曲 章子怡高情商化解尴尬</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/4/n11767304.md#1">赵正永的大管家 陕西前副省长陈国强被双开</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/1/4/n11767045.md#1">陕西前书记赵正永被审查 通报措辞极严厉</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/7/14/n11383492.md#1">秦光荣湖南官场丑闻曝光 情妇找到市委大院</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/5/9/n11244828.md#1">云南省委前书记秦光荣落马 曾叫板中南海</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/10/11/n10776157.md#1">传公安部副部长孟宏伟涉北戴河政变</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11770066.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935263.md#1">澳医学协会西澳主席：学校将关闭</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10077932.md#1" target="_blank">中国教育的失败源于破坏传统文化及灌输党文化</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/3/10/n11929991.md#1" target="_blank">斯洛伐克各界人士谴责中共迫害法轮功</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943372.md#1">“回国避疫”和“中国式撤侨”的真相</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942860.md#1">【最新疫情3.16】旧金山地区700万人居家防疫</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11925830.md#1">被扒皮的法官</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942373.md#1">图证蝗虫大军肆虐 中共急定预案恐难应对</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11940769.md#1">【新闻看点】病毒来自哪里？川普：中美都知道</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/14/n11941017.md#1">【现场视频】东莞虎门镇现大量防暴警察</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11945531.md#1">武汉人斥官员：给你改正机会 谁给我活命机会</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11941216.md#1">【一线采访视频版】封城近50天 武汉人生活困苦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943288.md#1">古巨基宣布当爸 晒宝宝合照分享喜悦</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/16/n11943213.md#1">又一好莱坞明星确诊 007邦女郎隔离在家</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/5/n11770066.htm">三正部级高官被批“两面人” 他们干了啥？</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/20/1/5/n11770066.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
